# critique-evals

./: .gitignore  README.md  output_latest.txt  pyproject.toml  run.sh
critique/: analysis.py  cli.py  corruptor.py  testcase.py
sample/: schema.txt
