[project]
name = "critique-evals"
version = "0.1.0"
description = "Agent pair evaluation framework for code generation + critique"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.75",
    "openai>=1.3",
    "tabulate>=0.9",
]

[project.scripts]
critique = "critique.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["critique"]
